--- a/static/scss/partials/main.scss
+++ b/static/scss/partials/main.scss
@@ -768,18 +768,15 @@ input.relay-email-address-label {
   background: transparent;
   font-size: 1em;
   padding: 6px 24px 6px 6px;
-  width: 188px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
   transition: all .2s ease;
-  // Reset styles from protocol
   background-color: none;
   border-radius: 0;
   border: 0;
   margin: 0;
   list-style: inherit;
-  min-width: 0;
 }
 
 .additional-notes {
@@ -789,7 +786,6 @@ input.relay-email-address-label {
   pointer-events: none;
   margin: auto auto 0 0;
   display: none;
-  width: 100%;
 }
 
 .legacy-addon-show-label {
@@ -807,13 +803,6 @@ input.relay-email-address-label {
 
 .legacy-addon-show-label .relay-email-address-label {
   width: 200px;
-}
-
-input::placeholder,
-.relay-email-address-label:placeholder-shown {
-  color: $color-grey-50;
-  opacity: 1;
-  width: 192px;
 }
 
 input:focus::placeholder {
@@ -849,8 +838,7 @@ input:focus::placeholder {
 }
 
 .relay-email-address-label:hover {
-  background: $color-grey-20;
-  width: 192px;
+  background: $color-grey-10;
   transition: all .1s ease-in-out;
 }
 
